[package]
name = "caffeinate"
version = "1.0.0"
authors = ["Alex James <theracermaster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
dbus = "0.9"
futures = { version = "0.3", features = ["compat"] }
libc = "0.2"
nix = "0.18"
pidfd = "0.2"
